--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 DB_USER="root"
 DB_PASSWORD="dbfilmon"
 DB_NAME="url_shortener"
+
+DB_USER=root
+DB_PASS=dbfilmon
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=url_shortener
